--- a/app/views/directors_templates/eldest.html.erb
+++ b/app/views/directors_templates/eldest.html.erb
@@ -1,3 +1,3 @@
 <h1> Eldest director </h1>
 
-<p> The eldest director in our dataset right now is <%= @oldest.name %>, born on <%= @oldest_dob.strftime("%B %e, %Y") %>. </p>
+<p> The eldest director in our dataset right now is <a href="/directors/<%= @oldest.id %>"> <%= @oldest.name %></a>, born on <%= @oldest_dob.strftime("%B %e, %Y") %>. </p>
