--- a/app/views/directors_templates/youngest.html.erb
+++ b/app/views/directors_templates/youngest.html.erb
@@ -1,3 +1,3 @@
 <h1> Youngest director </h1>
 
-<p> The youngest director in our dataset right now is <%= @youngest.name %>, born on <%= @youngest_dob.strftime("%B %e, %Y") %>. </p>
+<p> The youngest director in our dataset right now is <a href="/directors/<%= @youngest.id %>"> <%= @youngest.name %></a>, born on <%= @youngest_dob.strftime("%B %e, %Y") %>. </p>
