Finished movies index

--- a/app/views/directors_templates/details.html.erb
+++ b/app/views/directors_templates/details.html.erb
@@ -40,7 +40,7 @@
     <td><b> </b></td>
   </tr>
 
-  <% @Filmography.each do |film| %>
+  <% @filmography.each do |film| %>
     <tr> 
       <td><%= film.id %></td>
       <td> <img src="<%= film.image %>"> </td>
